minor fix for horizontal scroll

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ position: absolute;
 width: 100vw;
 height: 100vh;
 top: 0;
+right: 0;
 background-color: #000000a0;
 opacity: 0;
 transition: opacity 1s ease;
